WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151180
[EFL] fix EvasGL configuration error
https://bugs.webkit.org/show_bug.cgi?id=151180
Summary
[EFL] fix EvasGL configuration error
KwangHyuk
Reported
2015-11-11 21:50:02 PST
patch for below error will be attached soon. hyuki@hyuki:~/git/open/webkit2$ ./WebKitBuild/Release/bin/MiniBrowser ERR<8937>:EvasGL modules/evas/engines/gl_common/evas_gl_core.c:1329 _internal_config_set() Win cfg can't support Evas GL DR win (depth 0, stencil 0, msaa 0)
Attachments
patch,
(1.24 KB, patch)
2015-11-11 22:30 PST
,
KwangHyuk
gyuyoung.kim
: review+
Details
Formatted Diff
Diff
patch
(1.24 KB, patch)
2015-11-12 00:18 PST
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
patch again,
(1.63 KB, patch)
2015-11-12 05:22 PST
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
KwangHyuk
Comment 1
2015-11-11 22:02:35 PST
***
Bug 151181
has been marked as a duplicate of this bug. ***
KwangHyuk
Comment 2
2015-11-11 22:30:32 PST
Created
attachment 265367
[details]
patch,
Csaba Osztrogonác
Comment 3
2015-11-11 23:48:49 PST
run-perf-tests has the same issue on Ubuntu 15.10:
bug150932
Gyuyoung Kim
Comment 4
2015-11-11 23:51:03 PST
Comment on
attachment 265367
[details]
patch, View in context:
https://bugs.webkit.org/attachment.cgi?id=265367&action=review
> Tools/MiniBrowser/efl/main.c:2074 > + elm_config_accel_preference_set("opengl:depth24:stencil8");
Add a new line.
KwangHyuk
Comment 5
2015-11-12 00:18:44 PST
Created
attachment 265369
[details]
patch add line feed accroding to reviewer's comment
KwangHyuk
Comment 6
2015-11-12 01:31:39 PST
(In reply to
comment #3
)
> run-perf-tests has the same issue on Ubuntu 15.10:
bug150932
Ok, let me check it soon. :) Thank you for your sharing.
KwangHyuk
Comment 7
2015-11-12 01:32:31 PST
Comment on
attachment 265369
[details]
patch reviewed by Gyuyoung Kim
WebKit Commit Bot
Comment 8
2015-11-12 02:20:12 PST
Comment on
attachment 265369
[details]
patch Clearing flags on attachment: 265369 Committed
r192356
: <
http://trac.webkit.org/changeset/192356
>
WebKit Commit Bot
Comment 9
2015-11-12 02:20:15 PST
All reviewed patches have been landed. Closing bug.
KwangHyuk
Comment 10
2015-11-12 03:44:53 PST
elm_config_accel_preference_set() is already used in the main.c. I think that this call should be re-used. Therefore, re-opened this issue and patch will be submitted again.
KwangHyuk
Comment 11
2015-11-12 05:22:09 PST
Created
attachment 265385
[details]
patch again,
Csaba Osztrogonác
Comment 12
2015-11-12 05:23:16 PST
Comment on
attachment 265385
[details]
patch again, rs=me
WebKit Commit Bot
Comment 13
2015-11-12 06:12:52 PST
Comment on
attachment 265385
[details]
patch again, Clearing flags on attachment: 265385 Committed
r192362
: <
http://trac.webkit.org/changeset/192362
>
WebKit Commit Bot
Comment 14
2015-11-12 06:12:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug