[EFL] fix EvasGL configuration error https://bugs.webkit.org/show_bug.cgi?id=151180

Reviewed by Gyuyoung Kim.

EvasGL backend and depth, stencil buffer size should be specified before elm_win_add to let EvasGL keep quiet

* MiniBrowser/efl/main.c:
(window_create):


Canonical link: https://commits.webkit.org/169374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192356 268f45cc-cd09-0410-ab3c-d52691b4dbfc